hphp/hack/test/typecheck/function_pointer/simple_function_pointer_targs_bad_mismatch3.php.exp
File "simple_function_pointer_targs_bad_mismatch3.php", line 7, characters 8-10:
Expected no type parameter (Typing[4029])
File "simple_function_pointer_targs_bad_mismatch3.php", line 3, characters 10-12:
Definition is here
