hphp/hack/test/typecheck/function_pointer/simple_function_pointer_targs_bad_mismatch3.php
<?hh

function foo(int $arg): void {
}

function test(): void {
  $x = foo<_>;
  $x(4);
}
